# cleanup-branches

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  colour.rs  git.rs  main.rs
